--- a/backend/RestaurantMenu.API/appsettings.Development.json
+++ b/backend/RestaurantMenu.API/appsettings.Development.json
@@ -7,7 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=restaurant_menu_db;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Database=restaurant_menu_db;Username=postgres;Password=postgres;Port=5432"
   }
 }
-
