--- a/backend/RestaurantMenu.API/appsettings.Development.json
+++ b/backend/RestaurantMenu.API/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=restaurant_menu_db;Username=postgres;Password=postgres;Port=5432"
+    "DefaultConnection": "Host=aws-1-ap-southeast-1.pooler.supabase.com;Port=5432;Database=postgres;Username=postgres.bxaapyvtgsfjieiacgqj;Password=A@ssd!123ahmad;SSL Mode=Require;Trust Server Certificate=true;"
   }
 }
